[package]
name = "kvs"
version = "0.1.0"
authors = ["Cheng <lichchchn@gmail.com>"]
edition = "2018"
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
structopt = "0.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.8.2"
sled = "0.34.6"
dyn-clone = "1.0.3"
crossbeam = "0.8.0"
num_cpus = "1.13.0"
rayon = "1.5.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0"
tonic = {version="0.4", features = ["transport", "tls"]}
prost = "0.7"
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
futures-timer = "3.0.2"
tokio-stream = "0.1.4"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3.0"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[build-dependencies]
tonic-build = { version = "0.4", features = ["prost"] }

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "thread_pool"
harness = false
